# skills_dev

./: .gitignore  .mcp.json  DROID_PERMISSION_CHANGE.md  DROID_PERMISSION_ISSUE_EXPLAINED.md  README.md  package-lock.json  package.json  test_droid_medium_permission.py  test_mcp_droid.py  tsconfig.json  vitest.config.ts
.archive/: README.md
.claude/: CLAUDE.md  settings.json
.taskmaster/: config.json  state.json
codex-advisor-mcp/: .gitignore  README.md  ecosystem.config.cjs  ecosystem.config.js  mcp_server.py  pyproject.toml  setup.sh
codex-advisor-mcp/bridges/: server_lib.py
codex-advisor-mcp/src/codex_advisor/: codex_client.py  server.py
codex-advisor-skill/: LICENSE.txt  OFFICIAL_DOCS_ANALYSIS.md  OPTIMIZATION_COMPLETE.md  README.md  SKILL.md  ecosystem.config.cjs  ecosystem.config.js
coverage/: calculator.ts.html  coverage-final.json  index.html
docs/: QUICK_REFERENCE.md  README.md  REORGANIZATION_SUMMARY.md  TEST_REPORT.md  multi-agent-architecture-alignment.md  multi-agent-mcp-migration-guide.md  multi-agent-mcp-split-summary.md
droid-executor-mcp/: .coveragerc  README.md  ecosystem.config.cjs  ecosystem.config.js  fibonacci.py  hello_world.py  mcp_server.py  pyproject.toml  requirements-test.txt  run_tests.py  setup.sh
droid-executor-mcp/bridges/: server_lib.py
droid-executor-mcp/src/droid_executor/: droid_client.py  scheduler.py  server.py
droid-executor-mcp/tests/: test_fibonacci.py  test_hello_world.py  test_mcp_server.py
droid-executor-skill/: BUG_REPORT.md  DOCUMENTATION_CHECKLIST.md  FIXES_SUMMARY.md  FOCUSED_TEST_REPORT.md  (+8 more)
(+94 files in other folders)
