[project]
name = "droid-executor-mcp"
version = "1.0.0"
description = "Implementation-focused coding agent MCP server powered by Droid CLI"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
droid-executor = "droid_executor.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/droid_executor"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
